v3.0.8 fixed ent variants rendering added biome modifications for fabric (features currently not placing for both) fixed compatability issue with terralith -- closes #1 changed mighty white mushroom cap consolidated entity registration updated read-me